# apathy-inc-hackathon

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  pyproject.toml  requirements.txt
.nexus3/: clipboard.db
.nexus3/logs/: .active-agent-sessions.json  .active-session.json
.nexus3/logs/.1/2026-05-28_090307_agent_751075/: context.md  session.db
.nexus3/logs/.1/2026-05-28_090926_agent_08e3bb/: context.md  session.db
.nexus3/logs/.1/2026-05-28_093200_agent_a299bc/: context.md  (+1 more)
data/: README.md
docs/: development-proposal.md
docs/phases/: phase-0-scope.md  phase-1-simulation.md  phase-2-bots.md  phase-3-api.md  phase-4-observer-ui.md  phase-5-agent-adapter.md  phase-6-polish-and-demo.md
notes/: lessonslearned.md
scripts/: README.md  test_mcp_server.py
scripts/demo/: agent_smoke.py
scripts/smoke/: test_api.py  test_api_client.py
src/: README.md  __init__.py
src/agent_adapter/: __init__.py  action_parser.py  adapter.py  fallback.py  logging.py  mcp_tools.py  models.py  observation_builder.py
src/api/: __init__.py  fixtures.py  main.py
src/bots/: simple_bot.py
src/sim/: __init__.py  engine.py  models.py  rules.py
tests/: README.md
tests/fixtures/agent_adapter/: action_invalid_cooldown.json  action_invalid_schema.json  action_invalid_target.json  action_valid_hold.json  action_valid_launch.json  observation_valid.json
tests/integration/: test_agent_adapter.py  test_failure_paths.py  test_mixed_control.py
tests/sim/: test_bots.py  test_engine.py
web/: README.md  index.html
web/css/: style.css
web/js/: app.js  map.js  panels.js
(+18 files in other folders)
